[gd_scene load_steps=4 format=3 uid="uid://b61ws3j8wkjhm"]

[ext_resource type="Script" uid="uid://d2318v5bn480e" path="res://scripts/WinScreen.gd" id="1_iiocm"]
[ext_resource type="Texture2D" uid="uid://bwplyxll8xpho" path="res://assets/emptyWorld.png" id="2_yxbqr"]
[ext_resource type="FontFile" uid="uid://cx58al6qqjsb8" path="res://Viking.ttf" id="3_tylv2"]

[node name="win" type="Node2D"]
script = ExtResource("1_iiocm")

[node name="EmptyWorld" type="Sprite2D" parent="."]
position = Vector2(959.75, 538.5)
scale = Vector2(0.789355, 0.792826)
texture = ExtResource("2_yxbqr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinTextLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.106481
anchor_right = 0.376042
anchor_bottom = 0.22963
offset_left = 149.0
offset_top = 292.0
offset_right = 739.0
offset_bottom = 383.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tylv2")
theme_override_font_sizes/font_size = 18
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="Button" parent="CanvasLayer"]
offset_left = 1524.0
offset_top = 498.0
offset_right = 1725.0
offset_bottom = 534.0
scale = Vector2(0.843484, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tylv2")
theme_override_font_sizes/font_size = 22
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_pressed"]
